--- a/crud.html
+++ b/crud.html
@@ -8,10 +8,11 @@
     <title>Jerry Lu's Portfolio</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/crudStyle.css">
     <link rel="stylesheet" href="css/browserStyle.css" media="(min-width: 640px)">
     <link rel="stylesheet" href="css/mobileStyle.css" media="(max-width: 639.9px)">
     <link rel="preload" href="/fonts/kaushanscript-regular.woff2" as="font" type="font/woff2" crossorigin>
-    <script src="js/blog.js"></script>
+    <script type="module" src="js/blog.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.0/purify.min.js"></script>
   </head>
   
