updated alt text, added gradient

--- a/education.html
+++ b/education.html
@@ -33,7 +33,7 @@
 
     <main>
       <!--UCSD logo from https://collegepolltracker.com/logos/png/ucsd_300_100.png-->
-      <img src="images/ucsd.webp" alt="UCSD logo">
+      <img src="images/ucsd.webp" alt="UCSD logo, the letters UCSD with a trident in the middle">
       <strong>University of California, San Diego, March 2023</strong>
       <br>
       <em>Computer Engineering</em>
