--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="mainContent">
       
     <main>
-      <img src="images/Jerry_Lu_Face.jpg" alt="Jerry's face">
+      <img src="images/Jerry_Lu_Face.jpg" alt="An above the shoulder shot of Jerry looking forward with a striped red shirt">
       <p>Hi, I'm a fourth year Computer Engineering major in Warren. I really enjoy learning about how the programs I use or the games I play work. I like <code>JavaScript</code> as a language because I've been using it a lot recently.</p>
       <br>
       <aside><i>Fun Fact:</i> The first language I used was <code>LUA</code>.</aside>
