--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
     <main>
       <section id="zesty">
         <!--Chef Hat from https://cdn.iconscout.com/icon/free/png-256/chef-hat-2216706-1857400.png?f=webp&w=256-->
-        <h2><img src="images/chef_hat.webp" alt="Icon of a chef's hat"> Zesty Recipe Manager:</h2>
+        <h2><img src="images/chef_hat.webp" alt="Icon of a chef's hat that is black"> Zesty Recipe Manager:</h2>
         <a href="https://lucid-borg-00ad57.netlify.app/">Link to the website</a>
         <ul>
           <li>Worked on a team of 8 practicing Agile to design a recipe manager that allows users to save, filter, and edit recipes scraped from the web with an API or create their own.</li>
@@ -44,7 +44,7 @@
         <br>
         <picture>
           <source media="(min-width:640px)" srcset="images/zesty_browser.webp">
-          <img src="images/zesty_mobile.webp" alt="Screenshot of the Zesty Recipe Manager">
+          <img src="images/zesty_mobile.webp" alt="Screenshot of the Zesty Recipe Manager, showcasing the home page with icons for randomly fetched recipes">
         </picture>
       </section>
       
@@ -60,7 +60,7 @@
         </ul>
         <picture>
           <source media="(min-width:640px)" srcset="images/git_congress_browser.webp">
-          <img src="images/git_congress_mobile.webp" alt="Screenshot of git for congress">
+          <img src="images/git_congress_mobile.webp" alt="Screenshot of git for congress, showcasing a bill search of H.R.1 Congress 115 along with the versions of the bill">
         </picture>
       </section>
     </main>
