--- a/skills.html
+++ b/skills.html
@@ -36,7 +36,7 @@
         <h2>Languages:</h2>
           <details>
             <!--Java logo from https://cdn.iconscout.com/icon/free/png-256/java-3628857-3029997.png?f=webp&w=256-->
-            <summary><img src="images/java.webp" alt="Java logo"> Java</summary>
+            <summary><img src="images/java.webp" alt="Java logo, a cup on a plate with steam coming out"> Java</summary>
             <ul>
               <li>Decision Tree</li>
               <li>K Nearest Neighbor</li>
@@ -44,7 +44,7 @@
           </details>
           <details>
             <!--JavaScript logo from https://cdn.iconscout.com/icon/free/png-256/javascript-2752148-2284965.png?f=webp&w=256-->
-            <summary><img src="images/javascript.webp" alt="JavaScript logo"> JavaScript, HTML, CSS</summary>
+            <summary><img src="images/javascript.webp" alt="JavaScript logo, the letters JS in a yellow square"> JavaScript, HTML, CSS</summary>
             <ul>
               <li>Zesty Recipe Manager</li>
               <li>Data Analytics Server</li>
@@ -53,21 +53,21 @@
           </details>
           <details>
             <!--C logo from https://cdn.iconscout.com/icon/free/png-256/c-57-1175191.png?f=webp&w=256-->
-            <summary><img src="images/c.webp" alt="C logo"> C</summary>
+            <summary><img src="images/c.webp" alt="C logo, a blue hexagon with a C in the middle"> C</summary>
             <ul>
               <li>Huffman Encoding</li>
             </ul>
           </details>
           <details>
             <!--C++ logo from https://assets.studymite.com/uploads/c++.png-->
-            <summary><img src="images/c++.webp" alt="C++ logo"> C++</summary>
+            <summary><img src="images/c++.webp" alt="C++ logo, a blue hexagon with a C++ in the middle"> C++</summary>
             <ul>
               <li>Parallel Computing</li>
             </ul>
           </details>
           <details>
             <!--Python logo from https://cdn.iconscout.com/icon/free/png-256/python-3628999-3030224.png?f=webp&w=256-->
-            <summary><img src="images/python.webp" alt="Python logo"> Python</summary>
+            <summary><img src="images/python.webp" alt="Python logo, a blue python and a yellow python wrapped together"> Python</summary>
             <ul>
               <li>Sudoku Solver</li>
               <li>Image Classifier</li>
@@ -75,7 +75,7 @@
           </details>
           <details>
             <!--Go logo from https://embed.zenn.studio/api/optimize-og-image/ddb0771c7331ccee5c0a/https%3A%2F%2Fgolang.gallerycdn.vsassets.io%2Fextensions%2Fgolang%2Fgo%2F0.37.1%2F1673991699437%2FMicrosoft.VisualStudio.Services.Icons.Default-->
-            <summary><img src="images/go.webp" alt="Go logo"> Go</summary>
+            <summary><img src="images/go.webp" alt="Go logo, the word GO in blue color with lines coming out from the left"> Go</summary>
             <ul>
               <li>TritonHTTP</li>
               <li>Dropbox Clone</li>
