--- a/customdialogs.html
+++ b/customdialogs.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script type="module">
       import {custom_dialogs} from './js/customdialogs.js';
-      window.onload = custom_dialogs;
+      document.addEventListener('DOMContentLoaded', custom_dialogs);
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.0/purify.min.js"></script>
   </head>
