updated links to new tab and made one detail open

--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
       <section id="zesty">
         <!--Chef Hat from https://cdn.iconscout.com/icon/free/png-256/chef-hat-2216706-1857400.png?f=webp&w=256-->
         <h2><img src="images/chef_hat.webp" alt="Icon of a chef's hat that is black"> Zesty Recipe Manager:</h2>
-        <a href="https://lucid-borg-00ad57.netlify.app/">Link to the website</a>
+        <a href="https://lucid-borg-00ad57.netlify.app/" target="_blank">Link to the website</a>
         <ul>
           <li>Worked on a team of 8 practicing Agile to design a recipe manager that allows users to save, filter, and edit recipes scraped from the web with an API or create their own.</li>
           <li>Utilized <code>localStorage</code> and <code>JSON</code> methods such as stringify to store recipe objects as strings.</li>
@@ -53,7 +53,7 @@
       <section id="congress">
         <!--Paper and Quill from https://www.seekpng.com/png/detail/16-165940_scrolled-paper-and-quill-pen-png-clipart-image.png-->
         <h2><img src="images/paper_quill.webp" alt="Icon of a paper and quill"> Git for Congress:</h2>
-        <a href="https://github.com/twojineric/Git-For-Congress">Link to the Github Repository</a>
+        <a href="https://github.com/twojineric/Git-For-Congress" target="_blank">Link to the Github Repository</a>
         <ul>
           <li>Worked on a team of 3 to create a file control system for government bills.</li>
           <li>Used machine learning to classify edits to documents.</li>
