--- a/skills.html
+++ b/skills.html
@@ -42,7 +42,7 @@
               <li>K Nearest Neighbor</li>
             </ul>
           </details>
-          <details>
+          <details open>
             <!--JavaScript logo from https://cdn.iconscout.com/icon/free/png-256/javascript-2752148-2284965.png?f=webp&w=256-->
             <summary><img src="images/javascript.webp" alt="JavaScript logo, the letters JS in a yellow square"> JavaScript, HTML, CSS</summary>
             <ul>
