--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <!--Email icon from https://iconarchive.com/show/100-flat-2-icons-by-graphicloads/email-icon.html-->
         <p><img src="images/email.webp" alt="Envelope in circle icon">Email: <a href="mailto:jcl010@ucsd.edu">jcl010@ucsd.edu</a></p>
         <!--Github logo from https://cdn.iconscout.com/icon/free/png-256/github-3691248-3073768.png?f=webp&w=256-->
-        <p><img src="images/github.webp" alt="Github logo">Github: <a href="https://github.com/JerrryLu">https://github.com/JerrryLu</a></p>
+        <p><img src="images/github.webp" alt="Github logo">Github: <a href="https://github.com/JerrryLu" target="_blank">https://github.com/JerrryLu</a></p>
       </div>
       <br>
       <form id="contForm" action="contact.html" method="get" target="_blank">
