--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       
     <main>
       <img src="images/Jerry_Lu_Face.jpg" alt="An above the shoulder shot of Jerry looking forward with a striped red shirt">
-      <p>Hi, I'm a fourth year Computer Engineering major in Warren. I really enjoy learning about how the programs I use or the games I play work. I like <code>JavaScript</code> as a language because I've been using it a lot recently.</p>
+      <p>Hi, I'm a fourth year Computer Engineering major in Warren. I really enjoy learning about how the programs I use or the games I play work. 
+        I like <code>JavaScript</code> as a language because I've been using it a lot recently. I also like its interactions with <code>HTML</code> and <code>CSS</code>.</p>
       <br>
       <aside><i>Fun Fact:</i> The first language I used was <code>LUA</code>.</aside>
     </main>
