--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K9H7G46BSD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K9H7G46BSD');
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="author" content="Jerry Lu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
