--- a/crud.html
+++ b/crud.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Jerry Lu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jerry Lu's Portfolio</title>
+    <title>Jerry Lu - CRUD</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script type="module" src="js/blog.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.0/purify.min.js"></script>
