--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Jerry Lu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jerry Lu's Portfolio</title>
+    <title>Jerry Lu - Education</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/browserStyle.css" media="(min-width: 640px)">
