--- a/styledcrud.html
+++ b/styledcrud.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Jerry Lu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jerry Lu's Portfolio</title>
+    <title>Jerry Lu - Styled CRUD</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/crudStyle.css">
     <link rel="preload" href="/fonts/RoSpritendoSemiboldBeta-vmVwZ.otf" as="font" type="font/otf" crossorigin>
